Fixed splash page to get rid of stretched images

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -28,7 +28,7 @@ width: 100%;
 }
 
 #container {
- height: 100%;
+ height: auto;
  background-color: #F3F5F6;
 }
 
