--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -3,6 +3,7 @@
   background-color: black;
   color: white;
   width: 100%;
+  min-width: 1143px;
   z-index: 1000;
   position: static;
 }
